tests/semantic/type_system2/type_system2.dl
//
// Type System 2
//
// This test checks that types are handled correctly. It was
// created for issue #293 "Type Checker Fails to Give Errors
// for Records of Lesser Size Than is Required".
//

.type single_number = [ X:number ]
.type double_number = [ X:number, Y:number ]
.type triple_number = [ X:number, Y:number, Z:number ]

.type single_symbol = [ X:symbol ]
.type double_symbol = [ X:symbol, Y:symbol ]
.type triple_symbol = [ X:symbol, Y:symbol, Z:symbol ]

.decl SingleNumberRelation( X:single_number )
.decl DoubleNumberRelation( X:double_number )
.decl TripleNumberRelation( X:triple_number )

.decl SingleSymbolRelation( X:single_symbol )
.decl DoubleSymbolRelation( X:double_symbol )
.decl TripleSymbolRelation( X:triple_symbol )

// Single Number Relation

SingleNumberRelation(*single_number[1]).                // no error
SingleNumberRelation(*single_number[1, 1]).             // error
SingleNumberRelation(*single_number[1, 1, 1]).          // error

// Double Number Relation

DoubleNumberRelation(*double_number[1]).                // error
DoubleNumberRelation(*double_number[1, 1]).             // no error
DoubleNumberRelation(*double_number[1, 1, 1]).          // error

// Triple Number Relation

TripleNumberRelation(*triple_number[1]).                // error
TripleNumberRelation(*triple_number[1, 1]).             // error
TripleNumberRelation(*triple_number[1, 1, 1]).          // no error

// Single Symbol Relation

SingleSymbolRelation(*single_symbol["1"]).              // no error
SingleSymbolRelation(*single_symbol["1", "1"]).         // error
SingleSymbolRelation(*single_symbol["1", "1", "1"]).    // error

// Double Symbol Relation

DoubleSymbolRelation(*double_symbol["1"]).              // error
DoubleSymbolRelation(*double_symbol["1", "1"]).         // no error
DoubleSymbolRelation(*double_symbol["1", "1", "1"]).    // error

// Triple Symbol Relation

TripleSymbolRelation(*triple_symbol["1"]).              // error
TripleSymbolRelation(*triple_symbol["1", "1"]).         // error
TripleSymbolRelation(*triple_symbol["1", "1", "1"]).    // no error
